Added support for kubernetes

--- a/thule-admin-service/src/main/resources/bootstrap-cit.yml
+++ b/thule-admin-service/src/main/resources/bootstrap-cit.yml
@@ -1,5 +1,6 @@
-# Spring cloud configuration
+# Spring boot configuration
 spring:
   cloud:
-    config:
-      enabled: true
+    kubernetes:
+      discovery:
+        enabled: true
