--- a/thule-admin-service/src/dtest/docker/docker-compose.yml
+++ b/thule-admin-service/src/dtest/docker/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: pooh:8084/thule-admin-service
     environment:
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
-      # Since we are not using the configuration service to provide spring config, we instruct spring to use the config
-      # from a docker volume created at build time which contains the source for this micro-service
+      SPRING_CLOUD_CONFIG_ENABLED: "false"
+      SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED: "false"
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
       TZ: Europe/London
