--- a/thule-configuration-service/src/main/resources/bootstrap.yml
+++ b/thule-configuration-service/src/main/resources/bootstrap.yml
@@ -1,4 +1,4 @@
-# Spring cloud config client configuration
+# Spring boot configuration
 spring:
   application:
     name: thule-configuration-service
