--- a/thule-configuration-service/src/dtest/docker/docker-compose.yml
+++ b/thule-configuration-service/src/dtest/docker/docker-compose.yml
@@ -5,8 +5,9 @@ services:
     image: pooh:8084/thule-configuration-service
     environment:
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
+      SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED: "false"
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
       TZ: Europe/London
     ports:
-      - 9888:8080 # Required to allow docker tests to call the restful api
+      - 9888:8080
