--- a/thule-configuration-service/src/main/resources/config/application-ctest.yml
+++ b/thule-configuration-service/src/main/resources/config/application-ctest.yml
@@ -1,5 +1,15 @@
+# Spring logging
+logging:
+  level:
+    org.springframework: info
+    uk.co.serin.thule: trace
+
 # Spring boot configuration
 spring:
+  cloud:
+    kubernetes:
+      discovery:
+        enabled: false
   zipkin:
     enabled: false
 
