--- a/thule-configuration-service/src/main/resources/config/application-ide.yml
+++ b/thule-configuration-service/src/main/resources/config/application-ide.yml
@@ -1,8 +1,27 @@
+# Spring logging
+logging:
+  level:
+    org.springframework: info
+    uk.co.serin.thule: trace
+
 # Spring server configuration
 server:
   port: 8888
+
+# Spring boot configuration
+spring:
+  cloud:
+    kubernetes:
+      discovery:
+        enabled: false
+  zipkin:
+    enabled: false
 
 # Thule configuration
 thule:
   configurationservice:
     search-locations: ../thule-configuration-service/build/generated-resources/micro-services-config/config
+  shared:
+    logging:
+      logstash:
+        enabled: false
