Added support for kubernetes

--- a/thule-discovery-service/src/main/resources/config/application-ctest.yml
+++ b/thule-discovery-service/src/main/resources/config/application-ctest.yml
@@ -6,6 +6,11 @@ eureka:
     # By default eureka server can take a long time to start due to the default lease renewal of 30 seconds
     leaseRenewalIntervalInSeconds: 5
 
+# Spring logging
+logging:
+  level:
+    uk.co.serin.thule: trace
+
 # Spring boot configuration
 spring:
   zipkin:
