--- a/thule-discovery-service/src/main/resources/config/application-ide.yml
+++ b/thule-discovery-service/src/main/resources/config/application-ide.yml
@@ -1,3 +1,21 @@
+# Spring logging
+logging:
+  level:
+    uk.co.serin.thule: trace
+
 # Spring server configuration
 server:
   port: 8761
+
+# Spring boot configuration
+spring:
+  zipkin:
+    enabled: false
+
+# Thule configuration
+thule:
+  shared:
+    logging:
+      logstash:
+        enabled: false
+
