--- a/thule-email-service/src/main/resources/config/application-ctest.yml
+++ b/thule-email-service/src/main/resources/config/application-ctest.yml
@@ -1,5 +1,14 @@
+# Spring logging
+logging:
+  level:
+    uk.co.serin.thule: trace
+
 # Spring boot configuration
 spring:
+  cloud:
+    kubernetes:
+      discovery:
+        enabled: false
   mail:
     host: localhost
     port: 1025
