--- a/thule-gateway-service/src/main/resources/config/application-ide.yml
+++ b/thule-gateway-service/src/main/resources/config/application-ide.yml
@@ -1,3 +1,24 @@
+# Spring logging
+logging:
+  level:
+    uk.co.serin.thule: trace
+
 # Spring server configuration
 server:
   port: 8091
+
+# Spring boot configuration
+spring:
+  cloud:
+    kubernetes:
+      discovery:
+        enabled: false
+  zipkin:
+    enabled: false
+
+# Thule configuration
+thule:
+  shared:
+    logging:
+      logstash:
+        enabled: false
