--- a/thule-configuration-service/src/dtest/docker/docker-compose.yml
+++ b/thule-configuration-service/src/dtest/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: "3.7"
 services:
   ################################  thule-configuration-service  ################################
   thule-configuration-service:
@@ -9,5 +9,10 @@ services:
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
       TZ: Europe/London
+    networks:
+      - thule-configuration-service
     ports:
       - 9888:8080
+
+networks:
+  - thule-configuration-service
