--- a/thule-discovery-service/src/dtest/docker/docker-compose.yml
+++ b/thule-discovery-service/src/dtest/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: "3.7"
 services:
   ################################  thule-discovery-service  ################################
   thule-discovery-service:
@@ -10,5 +10,10 @@ services:
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
       TZ: Europe/London
+    networks:
+      - thule-discovery-service
     ports:
       - 9761:8080
+
+networks:
+  - thule-discovery-service
