--- a/thule-gateway-service/src/dtest/docker/docker-compose.yml
+++ b/thule-gateway-service/src/dtest/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: "3.7"
 services:
   ################################  thule-gateway  ################################
   thule-gateway:
@@ -10,5 +10,11 @@ services:
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
       TZ: Europe/London
+    networks:
+      - thule-gateway-service
     ports:
       - 9091:8080
+
+networks:
+  - thule-gateway-service
+
