--- a/thule-people-service/src/dtest/docker/docker-compose.yml
+++ b/thule-people-service/src/dtest/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: "3.7"
 services:
   ################################  thule-people-service  ################################
   thule-people-service:
@@ -12,6 +12,8 @@ services:
       THULE_PEOPLESERVICE_MYSQL_HOST: mysql
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
       TZ: Europe/London
+    networks:
+      - thule-people-service
     ports:
       - 9094:8080
 
@@ -21,5 +23,10 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       TZ: Europe/London
+    networks:
+      - thule-people-service
     ports:
       - 3308:3306 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
+
+networks:
+  - thule-people-service
