--- a/thule-people-service/src/test/docker/docker-compose-mysql.yml
+++ b/thule-people-service/src/test/docker/docker-compose-mysql.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: "3.7"
 services:
   ################################  Servers and Databases Required By Integration Tests  ################################
   mysql:
@@ -8,3 +8,6 @@ services:
       TZ: Europe/London
     ports:
       - 3307:3306 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
+
+networks:
+  - mysql
