--- a/thule-people-service/src/test/docker/docker-compose-mysql.yml
+++ b/thule-people-service/src/test/docker/docker-compose-mysql.yml
@@ -10,4 +10,4 @@ services:
       - 3307:3306 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
 
 networks:
-  - mysql
+  mysql
