--- a/thule-repository-mongodb/src/test/docker/thule-repository-mongodb-tests/docker-compose-mongo.yml
+++ b/thule-repository-mongodb/src/test/docker/thule-repository-mongodb-tests/docker-compose-mongo.yml
@@ -6,7 +6,7 @@ services:
     environment:
       TZ: Europe/London
     networks:
-      - thule-repository-mongodb
+      - mongodb
     ports:
       - 27017:27017
 
