Added support for kubernetes

--- a/thule-discovery-service/build.gradle
+++ b/thule-discovery-service/build.gradle
@@ -52,8 +52,7 @@ dependencies {
     compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-server")
     compile("org.springframework.cloud:spring-cloud-starter-sleuth")
     compile("org.springframework.cloud:spring-cloud-starter-zipkin")
-    compile("org.springframework.retry:spring-retry")
-    // Required to retry connecting to the configuration service when it is not available at startup
+    compile("org.springframework.retry:spring-retry") // Required to retry connecting to the configuration service when it is not available at startup
 
     testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
 
@@ -61,6 +60,4 @@ dependencies {
 
     dtestCompile("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
     dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
-    dtestCompile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
-    dtestCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
 }
