--- a/thule-people-service/src/main/resources/config/application-itest.yml
+++ b/thule-people-service/src/main/resources/config/application-itest.yml
@@ -19,7 +19,7 @@ thule:
   peopleservice:
     mysql:
       host: localhost
-      port: 3307 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
+      port: 3306
   shared:
     logging:
       logstash:
