--- a/thule-admin-service/build.gradle
+++ b/thule-admin-service/build.gradle
@@ -50,12 +50,10 @@ dependencies {
     compile("org.springframework.cloud:spring-cloud-starter-kubernetes")
     compile("org.springframework.cloud:spring-cloud-starter-sleuth")
     compile("org.springframework.cloud:spring-cloud-starter-zipkin")
-    compile("org.springframework.retry:spring-retry")
-    // Required to retry connecting to the configuration service when it is not available at startup
+    compile("org.springframework.retry:spring-retry") // Required to retry connecting to the configuration service when it is not available at startup
 
     testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
 
     dtestCompile("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
     dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
-    dtestCompile("org.springframework.boot:spring-boot-starter-web")
 }
