--- a/thule-configuration-service/src/main/resources/config/application.yml
+++ b/thule-configuration-service/src/main/resources/config/application.yml
@@ -15,6 +15,8 @@ management:
 
 # Spring boot configuration
 spring:
+  application:
+    name: thule-configuration-service
   cloud:
     config:
       server:
