--- a/thule-admin-service/src/dtest/docker/docker-compose.yml
+++ b/thule-admin-service/src/dtest/docker/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     ports:
       - 9093:8080
 
+################################  Networks  ################################
 networks:
   thule-admin-service:
 
