--- a/thule-discovery-service/src/dtest/docker/docker-compose.yml
+++ b/thule-discovery-service/src/dtest/docker/docker-compose.yml
@@ -15,5 +15,6 @@ services:
     ports:
       - 9761:8080
 
+################################  Networks  ################################
 networks:
   thule-discovery-service:
