--- a/thule-gateway-service/src/dtest/docker/docker-compose.yml
+++ b/thule-gateway-service/src/dtest/docker/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     ports:
       - 9091:8080
 
+################################  Networks  ################################
 networks:
   thule-gateway-service:
 
