--- a/thule-people-service/src/dtest/docker/docker-compose.yml
+++ b/thule-people-service/src/dtest/docker/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
       SPRING_CLOUD_CONFIG_ENABLED: "false"
+      SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED: "false"
       SPRING_FLYWAY_SCHEMAS: thule
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_PEOPLESERVICE_MYSQL_HOST: mysql
@@ -25,7 +26,8 @@ services:
     networks:
       - thule-people-service
     ports:
-      - 3306:3306
+      - 3308:3306 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
 
+################################  Networks  ################################
 networks:
   thule-people-service:
