--- a/thule-repository-mongodb/src/test/docker/thule-repository-mongodb-tests/docker-compose-mongo.yml
+++ b/thule-repository-mongodb/src/test/docker/thule-repository-mongodb-tests/docker-compose-mongo.yml
@@ -10,5 +10,6 @@ services:
     ports:
       - 27017:27017
 
+################################  Networks  ################################
 networks:
   mongodb:
