--- a/thule-configuration-service/src/dtest/docker/docker-compose.yml
+++ b/thule-configuration-service/src/dtest/docker/docker-compose.yml
@@ -14,5 +14,6 @@ services:
     ports:
       - 9888:8080
 
+################################  Networks  ################################
 networks:
   thule-configuration-service:
