--- a/thule-environment-provisioning/src/main/docker-compose/environments/cit/docker-compose.yml
+++ b/thule-environment-provisioning/src/main/docker-compose/environments/cit/docker-compose.yml
@@ -161,5 +161,6 @@ services:
       - 7091:8080
     restart: always
 
+################################  Networks  ################################
 networks:
   thule:
