--- a/thule-people-service/src/dtest/resources/config/application.yml
+++ b/thule-people-service/src/dtest/resources/config/application.yml
@@ -3,7 +3,7 @@ spring:
   datasource:
     driver-class-name: net.sf.log4jdbc.DriverSpy
     password: thule
-    url: jdbc:log4jdbc:mysql://localhost:3306/thule
+    url: jdbc:log4jdbc:mysql://${thule.peopleservice.mysql.host:localhost}:${thule.peopleservice.mysql.port:3306}/thule
     username: thule
 
 # Thule configuration
@@ -12,3 +12,5 @@ thule:
     api:
       host: localhost
       port: 9094
+    mysql:
+      port: 3308 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
