--- a/thule-people-service/src/test/docker/docker-compose-mysql.yml
+++ b/thule-people-service/src/test/docker/docker-compose-mysql.yml
@@ -7,7 +7,8 @@ services:
       MYSQL_ROOT_PASSWORD: root
       TZ: Europe/London
     ports:
-      - 3306:3306
+      - 3307:3306 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
 
+################################  Networks  ################################
 networks:
-  mysql
+  mysql:
