--- a/thule-people-service/src/dtest/resources/config/application.yml
+++ b/thule-people-service/src/dtest/resources/config/application.yml
@@ -13,4 +13,4 @@ thule:
       host: localhost
       port: 9094
     mysql:
-      port: 3308 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
+      port: 3306
