--- a/thule-people-service/src/dtest/docker/docker-compose.yml
+++ b/thule-people-service/src/dtest/docker/docker-compose.yml
@@ -7,7 +7,9 @@ services:
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
       SPRING_CLOUD_CONFIG_ENABLED: "false"
       SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED: "false"
-      SPRING_FLYWAY_SCHEMAS: thule
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
+      SPRING_FLYWAY_ENABLED: "false"
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_PEOPLESERVICE_MYSQL_HOST: mysql
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
