--- a/thule-people-service/src/main/resources/config/application-cit.yml
+++ b/thule-people-service/src/main/resources/config/application-cit.yml
@@ -1,4 +1,14 @@
 # Spring boot configuration
 spring:
+  datasource:
+    password: thule
+    username: thule
   flyway:
-    schemas: thule
+    password: root
+    user: root
+
+# Thule configuration
+thule:
+  peopleservice:
+    mysql:
+      schema: thule
