--- a/thule-people-service/src/main/resources/config/application-itest.yml
+++ b/thule-people-service/src/main/resources/config/application-itest.yml
@@ -5,12 +5,16 @@ logging:
 
 # Spring boot configuration
 spring:
+  datasource:
+    password: thule
+    username: thule
   cloud:
     kubernetes:
       discovery:
         enabled: false
   flyway:
-    schemas: thule
+    password: root
+    user: root
   zipkin:
     enabled: false
 
@@ -18,8 +22,7 @@ spring:
 thule:
   peopleservice:
     mysql:
-      host: localhost
-      port: 3306
+      schema: thule
   shared:
     logging:
       logstash:
