Migrated from kubectl delete/create to apply

--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-people-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-people-service.yml
@@ -27,6 +27,8 @@ spec:
               value: localhost
             - name: TZ
               value: Europe/London
+            - name: ROLLOUT_TIME
+              value:
           livenessProbe:
             httpGet:
               path: /actuator/health
