--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-admin-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-admin-service.yml
@@ -25,6 +25,8 @@ spec:
               value: cit
             - name: TZ
               value: Europe/London
+            - name: ROLLOUT_TIME
+              value:
           livenessProbe:
             httpGet:
               path: /actuator/health
