--- a/thule-discovery-service/build.gradle
+++ b/thule-discovery-service/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 
     dependencies {
         classpath("uk.co.serin.gradle.plugins:sonarqube-build-breaker-plugin:1.0.0-SNAPSHOT")
+        classpath("uk.co.serin.gradle.scripts:serin-gradle-scripts:1.0.0-SNAPSHOT")
     }
 }
 
@@ -26,7 +27,7 @@ apply plugin: "maven-publish"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
 // Standard Thule gradle plugin config
-apply from: "${rootDir}/../gradle/build-config.gradle"
+apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/build-config.gradle")
 
 // Non-standard Thule gradle plugin config
 
