--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 
     dependencies {
         classpath("uk.co.serin.gradle.plugins:sonarqube-build-breaker-plugin:1.0.0-SNAPSHOT")
+        classpath("uk.co.serin.gradle.scripts:serin-gradle-scripts:1.0.0-SNAPSHOT")
     }
 }
 
@@ -27,7 +28,7 @@ subprojects {
     apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
     // Standard Serin gradle plugin config
-    apply from: "${rootDir}/../gradle/build-config.gradle"
+    apply from: buildscript.classLoader.getResource("uk/co/serin/gradle/scripts/build-config.gradle")
 
     // Non-standard Serin gradle plugin config
     bootJar.enabled = false // Don't need an "über-jar" but still want the rest of the spring boot plugin
