Updated deprecated gradle dependencies configuration

--- a/thule-configuration-service/build.gradle
+++ b/thule-configuration-service/build.gradle
@@ -68,16 +68,16 @@ dependencies {
     annotationProcessor("org.projectlombok:lombok")
     compileOnly("org.projectlombok:lombok")
 
-    compile("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
-    compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
-    compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile("org.springframework.cloud:spring-cloud-config-server")
-    compile("org.springframework.cloud:spring-cloud-starter-kubernetes")
-    compile("org.springframework.cloud:spring-cloud-starter-sleuth")
-    compile("org.springframework.cloud:spring-cloud-starter-zipkin")
+    implementation("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
+    implementation("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
+    implementation("org.springframework.boot:spring-boot-starter-actuator")
+    implementation("org.springframework.cloud:spring-cloud-config-server")
+    implementation("org.springframework.cloud:spring-cloud-starter-kubernetes")
+    implementation("org.springframework.cloud:spring-cloud-starter-sleuth")
+    implementation("org.springframework.cloud:spring-cloud-starter-zipkin")
 
-    testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
+    testImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
 
-    dtestCompile("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
-    dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
+    dtestImplementation("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
+    dtestImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
 }
