--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -64,7 +64,7 @@ project("thule-spring-boot-starter-oauth2") {
         compileOnly("org.projectlombok:lombok")
 
         compile project(":thule-spring-boot-starter")
-        compile("org.springframework.cloud:spring-cloud-starter-oauth2")
+        implementation("org.springframework.cloud:spring-cloud-starter-oauth2")
 
         testCompile project(":thule-spring-boot-starter-test")
     }
@@ -78,7 +78,7 @@ project("thule-spring-boot-starter-oauth2-test") {
 
         compile project(":thule-spring-boot-starter")
         compile project(":thule-spring-boot-starter-test")
-        compile("org.springframework.security:spring-security-test")
+        implementation("org.springframework.security:spring-security-test")
     }
 }
 
@@ -87,9 +87,9 @@ project("thule-spring-boot-starter-test") {
     dependencies {
         compile project(":thule-spring-boot-starter")
         compile project(":thule-test")
-        compile("org.springframework.boot:spring-boot-starter-test")
-        compile("org.springframework.cloud:spring-cloud-contract-wiremock")
-        compile("org.springframework.restdocs:spring-restdocs-mockmvc")
+        implementation("org.springframework.boot:spring-boot-starter-test")
+        implementation("org.springframework.cloud:spring-cloud-contract-wiremock")
+        implementation("org.springframework.restdocs:spring-restdocs-mockmvc")
     }
 }
 
@@ -100,15 +100,15 @@ project("thule-test") {
         compileOnly("org.projectlombok:lombok")
 
         compile project(":thule-utils")
-        compile("org.awaitility:awaitility:4.0.1")
-        compile("org.springframework.boot:spring-boot-starter-actuator")
-        compile("org.springframework.boot:spring-boot-starter-test")
-        compile("org.springframework.boot:spring-boot-starter-web")
-        compile("org.springframework.retry:spring-retry")
+        implementation("org.awaitility:awaitility:4.0.1")
+        implementation("org.springframework.boot:spring-boot-starter-actuator")
+        implementation("org.springframework.boot:spring-boot-starter-test")
+        implementation("org.springframework.boot:spring-boot-starter-web")
+        implementation("org.springframework.retry:spring-retry")
 
         compileOnly("org.springframework.cloud:spring-cloud-starter-oauth2")
 
-        testCompile("org.springframework.cloud:spring-cloud-starter-oauth2")
+        testImplementation("org.springframework.cloud:spring-cloud-starter-oauth2")
     }
 }
 
@@ -122,21 +122,21 @@ project("thule-utils") {
         compileOnly("org.springframework.cloud:spring-cloud-starter-oauth2")
         compileOnly("org.springframework.cloud:spring-cloud-starter-openfeign")
 
-        compile("net.logstash.logback:logstash-logback-encoder:6.2")
-        compile("org.codehaus.janino:janino") // Required by logback if-condition statements in the logback xml configuration
-        compile("org.glassfish.jaxb:jaxb-runtime") // Required by anything using JAXB when using java 9+
-        compile("org.hibernate:hibernate-core")
-        compile("org.springframework.boot:spring-boot-starter-aop")
-        compile("org.springframework.boot:spring-boot-starter-logging")
-        compile("org.springframework.boot:spring-boot-starter-validation")
-        compile("org.springframework.boot:spring-boot-starter-web")
+        implementation("net.logstash.logback:logstash-logback-encoder:6.2")
+        implementation("org.codehaus.janino:janino") // Required by logback if-condition statements in the logback xml configuration
+        implementation("org.glassfish.jaxb:jaxb-runtime") // Required by anything using JAXB when using java 9+
+        implementation("org.hibernate:hibernate-core")
+        implementation("org.springframework.boot:spring-boot-starter-aop")
+        implementation("org.springframework.boot:spring-boot-starter-logging")
+        implementation("org.springframework.boot:spring-boot-starter-validation")
+        implementation("org.springframework.boot:spring-boot-starter-web")
 
-        testCompile("org.springframework.boot:spring-boot-starter-data-jpa")
-        testCompile("org.springframework.boot:spring-boot-starter-test")
-        testCompile("org.springframework.cloud:spring-cloud-starter-oauth2")
-        testCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
+        testImplementation("org.springframework.boot:spring-boot-starter-data-jpa")
+        testImplementation("org.springframework.boot:spring-boot-starter-test")
+        testImplementation("org.springframework.cloud:spring-cloud-starter-oauth2")
+        testImplementation("org.springframework.cloud:spring-cloud-starter-openfeign")
 
-        itestCompile("com.h2database:h2")
-        itestCompile("org.springframework.boot:spring-boot-starter-data-jpa")
+        itestImplementation("com.h2database:h2")
+        itestImplementation("org.springframework.boot:spring-boot-starter-data-jpa")
     }
 }
