--- a/thule-repository-mongodb/build.gradle
+++ b/thule-repository-mongodb/build.gradle
@@ -31,10 +31,10 @@ dependencies {
     annotationProcessor("org.projectlombok:lombok")
     compileOnly("org.projectlombok:lombok")
 
-    compile("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
-    compile("org.springframework.boot:spring-boot-starter-data-mongodb")
-    compile("org.springframework.boot:spring-boot-starter-validation")
+    implementation("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
+    implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
+    implementation("org.springframework.boot:spring-boot-starter-validation")
 
-    testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
-    testCompile("com.google.code.gson:gson")
+    testImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
+    testImplementation("com.google.code.gson:gson")
 }
